fix width problem in mobile styles

--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,10 +1,17 @@
 <header>
-    <h1 class="title">Title</h1>
-    <div class="options-div">
-        <div class="search-div">
-            <img src="assets/images/icon-search.svg" alt="search icon" >
-            <input type="text" name="search" id="search" placeholder="Search by title, content, or tags…">
+    <div class="header-desktop">
+        <h1 class="title">Title</h1>
+        <div class="options-div">
+            <div class="search-div">
+                <img src="assets/images/icon-search.svg" alt="search icon" >
+                <input type="text" name="search" id="search" placeholder="Search by title, content, or tags…">
+            </div>
+        </div>
+        <img src="assets/images/icon-settings.svg" alt="settings icon" class="search-btn"/>
+    </div>
+    <div class="header-mobile">
+        <div class="logo-div">
+            <img src="assets/images/logo.svg" alt="logo">
         </div>
     </div>
-    <img src="assets/images/icon-settings.svg" alt="settings icon" class="search-btn"/>
 </header>
