fix width problem mobile styles

--- a/src/components/notes/notes.component.html
+++ b/src/components/notes/notes.component.html
@@ -1,8 +1,9 @@
 <main>
     <header-component></header-component>
     <navigation></navigation>
-    <notes-content></notes-content>
-    <all-notes></all-notes>
-    <text-editor></text-editor>
+    <div class="note-div">
+        <all-notes></all-notes>
+        <text-editor></text-editor>
+    </div>
 </main>
 
