fix width problem mobile styles

--- a/src/components/text-editor/text-editor.component.html
+++ b/src/components/text-editor/text-editor.component.html
@@ -5,7 +5,7 @@
         <button (click)="formatText('underline')" class="toolbar-text-format-btn"><u>U</u></button>
         
         <!-- Text Size Selector -->
-        <select (change)="changeTextSize($event)">
+        <select (change)="changeTextSize($event)" class="toolbar-text-size">
           <option value="12px">12px</option>
           <option value="14px">14px</option>
           <option value="16px" selected>16px</option>
