--- a/src/components/text-editor/text-editor.component.scss
+++ b/src/components/text-editor/text-editor.component.scss
@@ -1,22 +1,34 @@
 
+//To do: Make it take the rest of the page
+
 .text-editor-div{
-    margin-left: 272px;
+    width: 100%;
+    height: calc(100vh - 81px);
     display: flex;
     flex-direction: column;
 
-    @media (max-width: 900px) {
+    @media (max-width: 1150px) {
         margin-left: 0;
+        width: 100vw;
+
     }
 }
 
 .toolbar{
-    background-color: white;
     display: flex;
     justify-content: space-evenly;
     max-width: 250px;
     align-items: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
+
+    @media (max-width: 1150px) {
+        margin-left: 0;
+        min-width: 300px;
+        margin: 0 auto;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
 }
 
 .toolbar-text-format-btn{
@@ -26,6 +38,10 @@
     outline: none;
     color: black;
     cursor: pointer;
+}
+
+.toolbar-text-size{
+    width: 55px;
 }
 
 .toolbar-text-format-btn:focus{
@@ -39,9 +55,16 @@ select{
 }
 
 .editor{
-    height: calc(100vh - 280px);
+    height: calc(100vh - 81px);
     padding: 1.5rem;
     outline: none;
+    background-color: aqua;
+    display: block;
+    width: 100%;
+
+    @media (max-width: 1150px) {
+        width: 100%;
+    }
 }
 
 .btn{
