--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,3 +100,53 @@ $themes: (
 
 /* Apply themes globally */
 @include themify($themes);
+
+
+//Grid
+
+$columns: 24;
+$gap: 16px; 
+
+// Grid container
+.grid {
+  display: grid;
+  grid-template-columns: repeat($columns, 1fr);
+  gap: $gap;
+}
+
+// Mixin for column span
+@mixin grid-col($col-span) {
+  grid-column: span $col-span;
+}
+
+// Responsive breakpoints
+$breakpoints: (
+  sm: 600px,
+  md: 900px,
+  lg: 1200px
+);
+
+// Mixin for responsive grid columns
+@mixin responsive-grid($size, $col-span) {
+  @media (min-width: map-get($breakpoints, $size)) {
+    grid-column: span $col-span;
+  }
+}
+
+//To not forget how to use it. I know you, myself... I know you
+
+// Example usage in SCSS
+// .col-12 {
+//   @include grid-col(12); //
+// }
+
+// .col-24 {
+//   @include grid-col(24);
+// }
+
+// Responsive example
+// .col-responsive {
+//   @include grid-col(24);
+//   @include responsive-grid(md, 12);
+//   @include responsive-grid(lg, 8);
+// }
