--- a/src/components/login/login.component.scss
+++ b/src/components/login/login.component.scss
@@ -1,11 +1,9 @@
+@import "../../styles.scss";
 
 main{
     height: 618px;
-    width: 540px;
-    display: flex;
-    padding: 3rem;
-    flex-direction: column;
-    align-items: center;
+    max-width: 540px;
+    padding: 2rem;
     border-radius: 10px;
     position: absolute;
     top: 50%; 
@@ -20,7 +18,11 @@ main{
 }
 
 .logo-div{
-    margin-bottom: 2rem;
+    @include grid-col(12);
+    @include grid-row(1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .login-message{
@@ -29,6 +31,8 @@ main{
 }
 
 .welcome-div{
+    @include grid-col(12);
+    @include grid-row(1);
     height: 60px;
     display: flex;
     flex-direction: column;
@@ -43,7 +47,8 @@ hr{
 }
 
 .google-login{
-    width: 100%;
+    @include grid-col(12);
+    @include grid-row(1);
 }
 
 .google-login-text{
@@ -60,6 +65,13 @@ hr{
     outline: none;
     background-color: white !important;
     color: black !important;
+}
+
+.no-account-div{
+    @include grid-col(12);
+    @include grid-row(1);
+    display: flex;
+    justify-content: center;
 }
 
 .text-no-account{
@@ -87,12 +99,21 @@ form{
     width: 444px;
     height: 232px;
     position: relative;
-    margin-top: 2rem;
+    @include grid-col(12);
+    @include grid-row(3);
 
     @media (max-width: 700px){
         width: 343px;
         padding: 1rem;
     }
+}
+
+hr{
+    @include grid-col(12);
+    @include grid-row(1);
+
+    border: none;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.233);
 }
 
 label{
