--- a/src/components/forgot-password/forgot-password.component.scss
+++ b/src/components/forgot-password/forgot-password.component.scss
@@ -1,10 +1,9 @@
+@import "../../styles.scss";
+
 main{
-    width: 540px;
-    height: 476px;
-    padding: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    max-width: 540px;
+    min-width: 340px;
+    padding: 2rem;
     border-radius: 10px;
     position: absolute;
     top: 50%; 
@@ -12,35 +11,43 @@ main{
     transform: translate(-50%, -50%);
 
     @media (max-width: 700px) {
-        height: 693px;
-        width: 343px;
         padding: 1rem;
     }
 }
 
 .logo-div{
-    margin-bottom: 2rem;
+    @include grid-col(12);
+    @include grid-row(1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.forgot-password-div{
+    @include grid-col(12);
+    @include grid-row(1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .password-message{
-    text-align: center;
     font-size: 14px;
 }
 
 form{
+    @include grid-col(12);
+    @include grid-row(3);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 444px;
-    height: 285px;
     position: relative;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
 
     @media (max-width: 700px){
-        width: 343px;
         padding: 1rem;
+        width: 343px;
     }
 }
 
