--- a/src/components/register/register.component.scss
+++ b/src/components/register/register.component.scss
@@ -1,7 +1,8 @@
+@import "../../styles.scss";
+
 main{
-    width: 540px;
-    height: 636px;
-    padding: 3rem;
+    max-width: 540px;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,13 +13,19 @@ main{
     transform: translate(-50%, -50%);
 
     @media (max-width: 700px) {
-        height: 693px;
-        width: 343px;
         padding: 1rem;
     }
 
     .logo-div{
-        margin-bottom: 2rem;
+        @include grid-col(12);
+        @include grid-row(1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title{
+        margin-bottom: 0.5rem;
     }
 
     .sign-up-message{
@@ -27,6 +34,8 @@ main{
     }
 
     .create-account-div{
+        @include grid-col(12);
+        @include grid-row(1);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -38,15 +47,13 @@ main{
     }
 
     form{
+        @include grid-col(12);
+        @include grid-row(4);
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        width: 444px;
-        height: 285px;
         position: relative;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
     
         @media (max-width: 700px){
             width: 343px;
@@ -95,6 +102,8 @@ main{
     }
 
     .google-login{
+        @include grid-col(12);
+        @include grid-row(1);
         width: 100%;
     }
     
@@ -105,15 +114,25 @@ main{
     }
     
     .google-login-btn{
-        width: 100%;
         height: 45px;
         border-radius: 10px;
         border: 2px solid rgba(160, 159, 159, 0.226);
         outline: none;
         background-color: white !important;
         color: black !important;
-        margin-bottom: 0.5rem;
     }
     
+    .login-div{
+        @include grid-col(12);
+        @include grid-row(1);
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .anchor-login{
+        font-weight: 700;
+        text-decoration: none;
+    }
 
 }
