--- a/src/components/all-notes/all-notes.component.scss
+++ b/src/components/all-notes/all-notes.component.scss
@@ -1,12 +1,19 @@
-.all-notes-div{
-    height: calc(100vh - 81px);
-    width: 290px;
-    margin-left: 272px;
-    border-right: 1px solid hsla(0, 0%, 50%, 0.644);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@import "../../styles.scss";
 
+:host{
+    border-right: 1px solid hsla(0, 0%, 50%, 0.644);
+    padding: 1rem;
+    
+    @media (max-width: 1150px) {
+        display: none;
+    }
+}
+
+.all-notes-div{
+    @include grid-col(1);
+    @include grid-row(12);
+    width: 100%;
+    position: relative;
     @media (max-width: 1150px) {
         display: none;
     }
@@ -14,6 +21,7 @@
     .create-note-btn{
         height: 40px;
         width: 240px;
+        margin: auto;
         margin-top: 2rem;
         border-radius: 10px;
         border: none;
@@ -33,6 +41,7 @@
         padding: 1rem;
         display: flex;
         flex-direction: column;
+        border-bottom: 1px solid hsla(0, 0%, 50%, 0.644);
     }
 
     .note-item-tags-div{
@@ -40,7 +49,6 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-       
     }
 
     .note-item-tag{
