--- a/src/components/navigation/navigation.component.scss
+++ b/src/components/navigation/navigation.component.scss
@@ -1,7 +1,8 @@
+@import "../../styles.scss";
+
 .navigation-menu{
-    position: absolute;
-    left: 0%;
-    top: 0%;
+    @include grid-col(1);
+    @include grid-row(12);
     width: 272px;
     display: flex;
     flex-direction: column;
@@ -62,20 +63,23 @@
     margin-right: 1rem;
 }
 
+.mobile-menu-div {
+    display: block; 
+    @include grid-col(12);
 
-.mobile-menu{
-    display: none;
+    @media (min-width: 1150px) {
+        display: none; 
+    }
+}
+
+.mobile-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     list-style: none;
 
-    @media (max-width: 1150px) {
-        position: absolute;
-        display: flex;
-        width: 100vw;
-        height: 74px;
-        align-items: center;
-        justify-content: space-evenly;
-        left: 0;
-        bottom: 0;
+    @media (min-width: 1150px) {
+        display: none; 
     }
 }
 
