add grid system

--- a/src/components/notes/notes.component.html
+++ b/src/components/notes/notes.component.html
@@ -1,9 +1,6 @@
-<main>
-    <header-component></header-component>
-    <navigation></navigation>
-    <div class="note-div">
-        <all-notes></all-notes>
-        <text-editor></text-editor>
-    </div>
+<main class="grid">
+    <header-component class="col-12"></header-component>
+    <navigation class="col-3"></navigation> 
+    <all-notes></all-notes> 
+    <text-editor></text-editor>  
 </main>
-
