add grid position to component

--- a/src/components/text-editor/text-editor.component.html
+++ b/src/components/text-editor/text-editor.component.html
@@ -1,4 +1,7 @@
 <div class="text-editor-div">
+  <div class="text-details">
+    <input type="text" name="title" id="title" placeholder="Title...">
+  </div>
     <div class="toolbar">
         <button (click)="formatText('bold')" class="toolbar-text-format-btn"><b>B</b></button>
         <button (click)="formatText('italic')" class="toolbar-text-format-btn"><i>I</i></button>
