redo grid reducing code

--- a/src/components/register/register.component.scss
+++ b/src/components/register/register.component.scss
@@ -1,6 +1,7 @@
 @import "../../styles.scss";
 
 main{
+    grid-template-rows: repeat(8, 1fr) !important;
     max-width: 540px;
     padding: 2rem;
     display: flex;
