--- a/src/components/forgot-password/forgot-password.component.scss
+++ b/src/components/forgot-password/forgot-password.component.scss
@@ -1,6 +1,7 @@
 @import "../../styles.scss";
 
 main{
+    grid-template-rows: repeat(5, 1fr) !important;
     max-width: 540px;
     min-width: 340px;
     padding: 2rem;
