--- a/src/components/navigation/navigation.component.scss
+++ b/src/components/navigation/navigation.component.scss
@@ -1,8 +1,11 @@
 @import "../../styles.scss";
 
+:host{
+    display: grid;
+}
+
 .navigation-menu{
     @include grid-col(1);
-    @include grid-row(12);
     width: 272px;
     display: flex;
     flex-direction: column;
@@ -64,7 +67,6 @@
 }
 
 .mobile-menu-div {
-    display: block; 
     @include grid-col(12);
 
     @media (min-width: 1150px) {
