--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,15 +104,19 @@ $themes: (
 
 //Grid
 
-$columns: 24;
+$columns: 12;
+$row: 12;
 $gap: 16px;
 
 // Grid container
 .grid {
   display: grid;
   grid-template-columns: repeat($columns, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  gap: $gap;
+  grid-template-rows: repeat($row, 1fr);
+  column-gap: $gap;
+
+  
+  
 }
 
 // Mixin for column span
