--- a/src/components/notes/notes.component.html
+++ b/src/components/notes/notes.component.html
@@ -1,6 +1,6 @@
 <main class="grid">
-    <header-component class="col-12"></header-component>
-    <navigation class="col-3"></navigation> 
+    <header-component></header-component>
+    <navigation></navigation> 
     <all-notes></all-notes> 
     <text-editor></text-editor>  
 </main>
