--- a/src/components/all-notes/all-notes.component.scss
+++ b/src/components/all-notes/all-notes.component.scss
@@ -1,6 +1,8 @@
 @import "../../styles.scss";
 
 :host{
+    @include grid-col(1);
+    @include grid-row(12);
     border-right: 1px solid hsla(0, 0%, 50%, 0.644);
     padding: 1rem;
     
