--- a/src/components/notes/notes.component.scss
+++ b/src/components/notes/notes.component.scss
@@ -1,8 +1,8 @@
 @import "../../styles.scss";
 
-
-:host {
-    @include grid-col(12);
-    @include grid-row(12);
-
+:host{
+    min-height: 100vh;
+}
+main{
+    
 }
