add mobile navigation to notes component

--- a/src/components/notes/notes.component.html
+++ b/src/components/notes/notes.component.html
@@ -3,4 +3,5 @@
     <navigation></navigation> 
     <all-notes></all-notes> 
     <text-editor></text-editor>  
+    <mobile-navigation></mobile-navigation>
 </main>
