--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,6 @@
 
 @include themify($themes);
 
-
 section{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
 }
