--- a/src/components/mobile-navigation/mobile-navigation.component.scss
+++ b/src/components/mobile-navigation/mobile-navigation.component.scss
@@ -1,9 +1,35 @@
 @import "../../styles.scss";
 
-.mobile-menu-div {
+:host{
     @include grid-col(12);
+}
+.mobile-menu-div {
+  
 
     @media (min-width: 1150px) {
         display: none; 
+    }
+}
+
+.mobile-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+
+    @media (min-width: 1150px) {
+        display: none; 
+    }
+}
+
+.mobile-menu-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+
+    .mobile-menu-title{
+        margin-top: 0.5rem;
     }
 }
