--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
     <div class="header-desktop">
+        <div class="logo-div">
+            <img src="assets/images/logo.svg" alt="logo">
+        </div>
         <div class="options-div">
             <div class="search-div">
                 <img src="assets/images/icon-search.svg" alt="search icon" >
