--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+<div class="login-div">
+    <h1 class="title">Welcome to Note</h1>
+    <p class="login-message">Please Log In to continue</p>
+    <form action="">
+        <div class="input-div">
+            <label for="email">Email Address</label>
+            <input type="text" name="email" id="email">
+        </div>
+        <div class="input-div">
+            <label for="password">Password</label>
+            <input type="text" name="password" id="password">
+            <a href="" class="forgot-password-anchor">Forgot</a>
+        </div>
+        <input type="submit" value="Login">
+    </form>
+    <p class="signup-paragraph">
+        No account yet?
+        <a href="" class="signup-anchor">Sign up</a>
+    </p>
+</div>
