--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -4,14 +4,14 @@
     <form action="">
         <div class="input-div">
             <label for="email">Email Address</label>
-            <input type="text" name="email" id="email">
+            <input type="text" name="email" id="email" placeholder="example@email.com">
         </div>
         <div class="input-div">
             <label for="password">Password</label>
             <input type="text" name="password" id="password">
             <a href="" class="forgot-password-anchor">Forgot</a>
         </div>
-        <input type="submit" value="Login">
+        <input type="submit" value="Login" class="btn">
     </form>
     <p class="signup-paragraph">
         No account yet?
