add desktop styles

--- a/src/pages/login-page/login-page.scss
+++ b/src/pages/login-page/login-page.scss
@@ -5,8 +5,12 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -54%);
-    display: flex;
-    justify-content: center;
+    display: flex;   
+    align-items:center;
+    flex-direction: column;
+    font-family: Arial;
+    background-color: aqua;
+    border-radius: 10px;
 }
 
 .logo-div{
