--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -1,4 +1,4 @@
-<div class="login-div">
+<div class="login-div login">
     <h1 class="title">Welcome to Note</h1>
     <p class="login-message">Please Log In to continue</p>
     <form action="">
@@ -11,7 +11,7 @@
             <input type="text" name="password" id="password">
             <a href="" class="forgot-password-anchor">Forgot</a>
         </div>
-        <input type="submit" value="Login" class="btn">
+        <input type="submit" value="Login" class="btn login-btn">
     </form>
     <p class="signup-paragraph">
         No account yet?
