--- a/src/components/forgot-password/forgot-password.html
+++ b/src/components/forgot-password/forgot-password.html
@@ -1,1 +1,11 @@
-<p>forgot-password works!</p>
+<div class="reset-password-div">
+    <h1 class="title">Forgotten your password?</h1>
+    <p class="reset-password-message">Enter your email below, and we’ll send you a link to reset it.</p>
+    <form action="">
+        <div class="input-div">
+            <label for="email">Email Address</label>
+            <input type="text" name="email" id="email" placeholder="example@email.com">
+        </div>
+        <input type="submit" value="Send Reset Link" class="btn reset-password-btn">
+    </form>
+</div>
