change class names

--- a/src/components/forgot-password/forgot-password.scss
+++ b/src/components/forgot-password/forgot-password.scss
@@ -6,7 +6,7 @@
     margin-top: 1rem;
 }
 
-.reset-password-message{
+.forgot-password-message{
     font-size: 14px;
     text-align: center;
     margin-top: 0.5rem;
@@ -46,7 +46,7 @@ form{
     }
 }
 
- .reset-password-btn{
+ .forgot-password-btn{
             width: 444px;
             height: 44px;
 
