--- a/src/components/forgot-password/forgot-password.html
+++ b/src/components/forgot-password/forgot-password.html
@@ -1,11 +1,11 @@
-<div class="reset-password-div">
+<div class="forgot-password-div">
     <h1 class="title">Forgotten your password?</h1>
-    <p class="reset-password-message">Enter your email below, and we’ll send you a link to reset it.</p>
+    <p class="forgot-password-message">Enter your email below, and we’ll send you a link to reset it.</p>
     <form action="">
         <div class="input-div">
             <label for="email">Email Address</label>
             <input type="text" name="email" id="email" placeholder="example@email.com">
         </div>
-        <input type="submit" value="Send Reset Link" class="btn reset-password-btn">
+        <input type="submit" value="Send Reset Link" class="btn forgot-password-btn">
     </form>
 </div>
