--- a/src/pages/auth-page/signup/signup.scss
+++ b/src/pages/auth-page/signup/signup.scss
@@ -55,3 +55,14 @@ form{
         }  
         }
 }
+
+.login-paragraph{
+    font-size: 15px;
+    text-align: center;
+
+    .login-anchor{
+        text-decoration: none;
+        color: black;
+        font-weight: 500;
+    }
+}
