fix size of main div

--- a/src/pages/auth-page/forgot-password/forgot-password.scss
+++ b/src/pages/auth-page/forgot-password/forgot-password.scss
@@ -1,9 +1,12 @@
 @use "../../../styles.scss" as *;
 
+.forgot-password-div{
+    padding: 1rem;
+}
+
 .title{
     font-size: 26px;
     text-align: center;
-    margin-top: 1rem;
 }
 
 .forgot-password-message{
@@ -21,7 +24,7 @@ form{
 
     .input-div{
 
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
         border-radius: 5px;
         position: relative;
 
@@ -44,9 +47,8 @@ form{
                 }  
             }
     }
-}
 
- .forgot-password-btn{
+     .forgot-password-btn{
             width: 444px;
             height: 44px;
 
@@ -55,3 +57,5 @@ form{
             
                 }   
             }
+}
+
