--- a/src/pages/auth-page/reset-password/reset-password.scss
+++ b/src/pages/auth-page/reset-password/reset-password.scss
@@ -1,5 +1,9 @@
 @use"../../../styles.scss" as *;
 
+.reset-password-div{
+    padding: 1rem;
+}
+
 .title{
     font-size: 26px;
     text-align: center;
@@ -44,14 +48,16 @@ form{
                 }  
             }
     }
-}
 
- .reset-password-btn{
+     .reset-password-btn{
             width: 444px;
             height: 44px;
+            margin-top: 1rem;
 
                 @media (max-width: $mobile){
                     width: 311px;
             
                 }   
             }
+}
+
