--- a/src/pages/auth-page/signup/signup.scss
+++ b/src/pages/auth-page/signup/signup.scss
@@ -1,5 +1,10 @@
 @use "../../../styles.scss" as *;
 
+
+.signup-div{
+    padding: 1rem;
+}
+
 .title{
     font-size: 26px;
     text-align: center;
@@ -63,6 +68,6 @@ form{
     .login-anchor{
         text-decoration: none;
         color: black;
-        font-weight: 500;
+        font-weight: 700;
     }
 }
