--- a/src/styles/themes/_dark-theme.scss
+++ b/src/styles/themes/_dark-theme.scss
@@ -1,4 +1,4 @@
-$backgound-login-color: #2B303B;
+$background-login-color: #2B303B;
 $background-color: #232530;
 $login-color: #0E121B;
 $text-primary: #F3F5F8;
