--- a/src/styles/themes/_light-theme.scss
+++ b/src/styles/themes/_light-theme.scss
@@ -1,4 +1,4 @@
-$backgound-login-color: #F3F5F8;
+$background-login-color: #F3F5F8;
 $background-color: #FFFFFF;
 $login-color: #FFFFFF;
 $text-primary: #0E121B;
